--- a/ActionRxJava/build.gradle
+++ b/ActionRxJava/build.gradle
@@ -16,5 +16,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "io.reactivex.rxjava3:rxjava:3.0.3"
-//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
