--- a/ActionRxJava/gradle/wrapper/gradle-wrapper.properties
+++ b/ActionRxJava/gradle/wrapper/gradle-wrapper.properties
@@ -3,3 +3,6 @@ distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-6.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
